@@ -1,9 +1,10 @@
 package com.poker.util;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class AvatarPreset {
-    public static final List<String> AVATARS = List.of(
+    public static final List<String> AVATARS = Arrays.asList(
         "🦁", "🐯", "🐸", "🦊",
         "🐰", "🐼", "🐨", "🦄",
         "🐲", "🦅", "🐺", "🐙",
